<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RealCraft</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_exit">Exit</string>
    <string name="startlocation">开启定位</string>
    <string name="stoplocation">停止定位</string>
    <string name="error_code_desc">错误码说明</string>
    <string name="qa_title">常见问题</string>
    <string name="hight_accuracy_desc">高精度定位模式下，会同时使用GPS、Wifi和基站定位，返回的是当前条件下精度最好的定位结果</string>
    <string name="saving_battery_desc">低功耗定位模式下，仅使用网络定位即Wifi和基站定位，返回的是当前条件下精度最好的网络定位结果</string>
    <string name="device_sensor_desc">仅用设备定位模式下，只使用用户的GPS进行定位。这个模式下，由于GPS芯片锁定需要时间，首次定位速度会需要一定的时间</string>
    <string name="error_code_detail"> 61 ： GPS定位结果\n
		62 ： 扫描整合定位依据失败。此时定位结果无效。\n
		63 ： 网络异常，没有成功向服务器发起请求。此时定位结果无效。\n
		65 ： 定位缓存的结果。\n
		66 ： 离线定位结果。通过requestOfflineLocaiton调用时对应的返回结果\n
		67 ： 离线定位失败。通过requestOfflineLocaiton调用时对应的返回结果\n
		68 ： 网络连接失败时，查找本地离线定位时对应的返回结果\n
		161： 表示网络定位结果\n
		162~167： 服务端定位失败\n
		502：key参数错误\n
		505：key不存在或者非法\n
		601：key服务被开发者自己禁用\n
		602：key mcode不匹配\n
		501～700：key验证失败\n</string>
    <string name="qa_callback">问题反馈方法</string>
    <string name="qa_callback_mail">mapapi@baidu.com</string>
    <string name="title_activity_information">Information</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="main_layout">登陆成功</string>
    <string name="login_name">请输入用户名</string>
    <string name="login_password">请输入密码</string>
    <string name="register_re_password">请再输入一遍密码</string>
    <string name="register_email">请输入电子邮箱</string>
    <string name="register_submit">确认注册</string>
    <string name="register_name">请输入用户名</string>
    <string name="register_password">请输入密码</string>
    <string name="login_submit">确认登陆</string>
    <string name="login_wait">登陆中请稍后</string>
    <string name="register_wait">注册中，请稍后</string>
    <string name="turn_to_register">注册账号</string>
    <string name="login_fail">登陆失败，请重试~</string>
    <string name="register_fail">注册失败，请重试</string>
    <string name="turning">现在为您跳转</string>
    <string name="title_activity_resource_info">ResourceInfoActivity</string>
    <string name="title_activity_building_info">BuildingInfoActivity</string>
    <string name="check_info">查看详情</string>
    <string name="collect">采集</string>
    <string name="attack">攻击</string>
    <string name="stop">停止</string>
    <string name="build">建造</string>
    <string name="abandon">废弃</string>
    <string name="welcomeTitle">"欢迎来到RealCraft！"</string>
    <string name="welcomeContent">下面我将引导你完成进行第一次游戏</string>
    <string name="loginnameTitle">用户名</string>
    <string name="loginnameContent">请在这里输入你的用户名</string>
    <string name="loginpasswordTitle">密码</string>
    <string name="loginpasswordContent">请在这里输入你的登陆密码</string>
    <string name="submitTitle">提交</string>
    <string name="submitContent">点击这里提交</string>
    <string name="turnTitie">注册</string>
    <string name="turnContent">如果你还没有游戏帐户，请点击此处进行注册</string>
    <string name="hire">招募</string>
    <string name="self_info">个人信息</string>
    <string name="self_info_list">个人信息列表</string>
    <string name="resource_info">资源信息</string>
    <string name="resource_info_list">资源信息列表</string>
    <string name="construction_info">建造物信息</string>
    <string name="construction_info_list">建造物信息列表</string>
    <string name="workforce_cost_info">劳动力价格信息</string>
    <string name="title_activity_hire_workforce">HireWorkforceActivity</string>

</resources>
