<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.realcraft.Information" >
    
    <TextView
        android:id="@+id/TextViewConstructionInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/construction_info"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/TextViewConstructionInfoList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/TextViewConstructionInfo"
        android:layout_marginTop="25dp"
        android:text="@string/construction_info_list" />

    <TextView
        android:id="@+id/TextViewSelfInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonCollect"
        android:layout_centerVertical="true"
        android:text="@string/self_info"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/TextViewSelfInfoList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/TextViewSelfInfo"
        android:layout_marginTop="25dp"
        android:text="@string/self_info_list" />
    
    <Button
        android:id="@+id/buttonBuild"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/build" />

    <Button
        android:id="@+id/buttonAbandon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/buttonAttack"
        android:layout_alignBottom="@+id/buttonAttack"
        android:text="@string/abandon" />

    <Button
        android:id="@+id/buttonAttack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/buttonBuild"
        android:layout_alignBottom="@+id/buttonBuild"
        android:text="@string/attack" />

</RelativeLayout>