<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.realcraft.Information" >
    
    <Button
        android:id="@+id/buttonCollect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/collect" />

    <TextView
        android:id="@+id/TextViewResourceInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resource_info"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/TextViewResourceInfoList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/TextViewResourceInfo"
        android:layout_marginTop="25dp"
        android:text="@string/resource_info_list" />

    <TextView
        android:id="@+id/TextViewSelfInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonCollect"
        android:layout_centerVertical="true"
        android:text="@string/self_info"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/TextViewSelfInfoList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/TextViewSelfInfo"
        android:layout_marginTop="25dp"
        android:text="@string/self_info_list" />

</RelativeLayout>