<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".LoginActivity">


    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_name"
        android:hint="@string/login_name"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/login_password"
        android:id="@+id/login_password"
        android:layout_below="@+id/login_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/login_submit"
        android:id="@+id/login_submit"
        android:background="@drawable/button_light"
        android:layout_below="@+id/login_password"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/turn_to_register"
        android:id="@+id/turn_to_register"
        android:background="@drawable/button_light"
        android:layout_below="@+id/login_password"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
